# Siphon

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml  siphon-phase2-spec.md
src/siphon/: __main__.py  activity.py  ad_detect.py  app.py  config.py  cutter.py  db.py  downloader.py  feed.py  filters.py  llm_trim.py  pipeline.py  pocketcasts.py  podcast.py  sponsorblock.py  transcribe.py  tray.py  youtube.py
src/siphon/routes/: api.py  feeds.py  media.py  ui.py
src/siphon/templates/: _feed_card.html  activity_log.html  add_feed.html  base.html  feeds.html  import_opml.html  stats.html
tests/: test_ad_detect.py  test_config.py  test_cutter.py  test_db.py  test_downloader.py  test_feed.py  test_filters.py  test_integration.py  test_llm_trim.py  test_pipeline.py  test_podcast.py  test_post_download.py  test_routes.py  test_sponsorblock.py  test_tray.py  test_ui.py  test_workers.py  test_youtube.py
tests/fixtures/: sample_config.yaml  sample_metadata.json
