[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon"
version = "0.1.0"
description = "Self-hosted YouTube-to-podcast bridge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2024.12.0",
    "apscheduler>=3.10,<4",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "freezegun>=1.2",
]

[project.scripts]
siphon = "siphon.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
